--- a/styles.css
+++ b/styles.css
@@ -49,8 +49,7 @@ svg:hover {
 
 .landing-page {
 
-    background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(https://wallpaper.dog/large/20471179.jpg);
-    background-color: #121212;
+    background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(https://wallpaperaccess.com/full/2671935.jpg);
     background-size: cover;
     height: 100vh;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
@@ -64,7 +63,14 @@ svg:hover {
 }
 
 .about-page {
-    background-color: #121212;
+    background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(https://wallpaper.dog/large/20471179.jpg);
+    background-size: cover;
+    height: 100vh;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+}
+
+.contact-page {
+    background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(https://i.ytimg.com/vi/3ubUGdr_hq0/maxresdefault.jpg);
     background-size: cover;
     height: 100vh;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
