--- a/styles.css
+++ b/styles.css
@@ -83,3 +83,11 @@ svg:hover {
   text-align: start !important;
   text-align-last: start !important;
 }
+
+.api-check {
+  bottom: 0;
+  left: 0;
+  margin: 0 40px 30px 40px;
+  position: absolute;
+  text-align: center;
+}
