--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,14 @@ svg:hover {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
+.nus-page {
+  background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)),
+    url("something.jpg");
+  background-size: cover;
+  height: 100vh;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+}
+
 ::marker {
   unicode-bidi: isolate;
   font-variant-numeric: tabular-nums;
