--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ svg:hover {
 
 .nus-page {
   background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)),
-    url(https://cdn.wallpapersafari.com/67/75/mp5bRl.jpg);
+    url(https://i.ytimg.com/vi/3ubUGdr_hq0/maxresdefault.jpg);
   background-size: cover;
   height: 100vh;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
